DOMjudge Programming Contest Judging System

Version 3.3.4 - DEV
-------------------
 - Readd note for truncated file contents.
 - Correct mount bind option, see Debian bug #677815. Ported from
   WISVCH/DOMjudge tree at GitHub.
 - Bugfix: check that compilation creates executable file, closes: #119.
 - Fix minor HTML validation error and PHP notice.

Version 3.3.3 - 12 November 2012
--------------------------------
 - Fix bug: clarifications sent by jury member would display the recipient
   as 'All' (even though linked to one team). Thanks Mark Janssen.
 - Fix bug: CSS class missing in disabled balloon interfaces rows.
 - Fix bug: link to CSS colour names reference was broken.
 - Make Java class name detection compatible with Java 7.
 - Make Haskell example source compatible with newer GHC versions.
 - Add mapping to GeSHi highlighting to translate DOMjudge language
   ID's to their GeSHi counterparts.
 - Problem format spec: allow to include a problem statement text.
 - Add cascading delete on submitid to balloons table.
 - Install sudoers snippet. Thanks Heinrich Stamerjohanns.
 - Minor admin documentation improvements.

Version 3.3.2 - 2 September 2012
--------------------------------
 - Fix bug: change absolute time strings for those times which are specified
   as relative time when starttime was changed by "start now".
 - Fix bug: long overflow in runguard / output_exit_time.
 - Fix bug: add missing $pagename to check_judgings.php.
 - Fix bug: race condition in runguard where the forked child terminates
   before the parent could setup a signal handler.
 - Fix bug: handle gracefully events deleted from the database.
 - Fix bug: submitclient compile error with g++ (Debian 4.7.1-2) 4.7.1.
 - Don't let sudo try to read passwords.
 - Various documentation improvements.

Version 3.3.1 - 12 June 2012
----------------------------
 - Fix bug: buffer underflow bug in runguard when compiled on Ubuntu 12.04: