@@ -7,6 +7,8 @@
  * under the GNU GPL. See README and COPYING for details.
  */
 
+$pagename = basename($_SERVER['PHP_SELF']);
+
 require('init.php');
 $refresh = '30;url=scoreboard.php';
 $title = 'Scoreboard';
